syntax = "proto3";

import "github.com/medibloc/go-medibloc/core/pb/block.proto";

package syncpb;

message FindBaseRequest {
  string id = 1;
  uint64 target_height = 2;
  uint64 try_height = 3;
  int64 timestamp = 4;
}

message FindBaseResponse {
  bool status = 1;
  bytes target_hash = 2;
  bytes try_hash = 3;
}

message BlockByHeightRequest {
  string id = 1;
  uint64 target_height = 2;
  uint64 block_height = 3;
  int64 timestamp = 4;
}

message BlockByHeightResponse {
  bool status = 1;
  bytes target_hash = 2;
  corepb.Block block_data = 3;
}
